tests/baselines/reference/project/cantFindTheModule/node/cantFindTheModule.errors.txt
decl.ts(1,26): error TS2307: Cannot find external module './foo/bar.js'.
decl.ts(2,26): error TS2307: Cannot find external module 'baz'.
decl.ts(3,26): error TS2307: Cannot find external module './baz'.


==== decl.ts (3 errors) ====
    import modErr  = require("./foo/bar.js");
                             ~~~~~~~~~~~~~~
!!! error TS2307: Cannot find external module './foo/bar.js'.
    import modErr1 = require("baz");
                             ~~~~~
!!! error TS2307: Cannot find external module 'baz'.
    import modErr2 = require("./baz");
                             ~~~~~~~
!!! error TS2307: Cannot find external module './baz'.
    
    //import modErr1 = require("\bar");
    
    //import mod  = require("./foo/bar");
    //import mod1 = require("../module paths/foo/bar");
    //import mod2 = require("foo/bar");
    
    